--- a/app/src/main/res/layout/fragment_dialog_add_item_shop.xml
+++ b/app/src/main/res/layout/fragment_dialog_add_item_shop.xml
@@ -95,7 +95,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_itemDetails"
             app:startIconDrawable="@drawable/item_icon">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <com.example.savingbyshopping.utils.EditTextCustom
                 android:id="@+id/ed_namaItem"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -119,7 +119,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/input_layoutNamaItem">
 
-            <com.google.android.material.textfield.MaterialAutoCompleteTextView
+            <com.example.savingbyshopping.utils.AutoCompletedEdited
                 android:id="@+id/ed_JenisProduk"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -256,7 +256,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_originalPrice"
             app:startIconDrawable="@drawable/item_icon">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <com.example.savingbyshopping.utils.EditTextCustom
                 android:id="@+id/ed_originalPrice"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
