--- a/app/src/main/res/layout/fragment_dialog_add_item_shop.xml
+++ b/app/src/main/res/layout/fragment_dialog_add_item_shop.xml
@@ -256,7 +256,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_originalPrice"
             app:startIconDrawable="@drawable/item_icon">
 
-            <com.example.savingbyshopping.utils.EditTextCustom
+            <com.example.savingbyshopping.utils.EditCurrencyCustom
                 android:id="@+id/ed_originalPrice"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -384,7 +384,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_priceAfterDiskon"
             app:startIconDrawable="@drawable/item_icon">
 
-            <com.example.savingbyshopping.utils.EditTextCustom
+            <com.example.savingbyshopping.utils.EditCurrencyCustom
                 android:id="@+id/ed_afterlPrice"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
