UPDATE TOTAL PRICE PART 1 ( BUG UNTUK BUY ITEM FREE ITEM )

--- a/app/src/main/res/layout/fragment_dialog_add_item_shop.xml
+++ b/app/src/main/res/layout/fragment_dialog_add_item_shop.xml
@@ -385,7 +385,7 @@
             app:startIconDrawable="@drawable/item_icon">
 
             <com.example.savingbyshopping.utils.EditCurrencyCustom
-                android:id="@+id/ed_afterlPrice"
+                android:id="@+id/ed_after_price"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
