UPDATE LAYOUT RV ITEM

--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -10,5 +10,6 @@
         <item>@font/revalia</item>
         <item>@font/roboto_serif_bold</item>
         <item>@font/source_serif_4_bold</item>
+        <item>@font/source_serif_4_semibold</item>
     </array>
 </resources>
