--- a/app/src/main/res/layout/itemshop_list.xml
+++ b/app/src/main/res/layout/itemshop_list.xml
@@ -3,18 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="152dp"
+    android:layout_height="wrap_content"
     android:background="@color/hijau_transparant">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="128dp"
+        android:layout_marginVertical="10dp"
         android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="12dp"
-        android:elevation="6dp"
+        app:cardElevation="5dp"
+        app:cardBackgroundColor="@color/backround_latar"
         app:cardCornerRadius="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -142,11 +144,11 @@
                 android:id="@+id/btn_deleteItemShop"
                 android:layout_width="21dp"
                 android:layout_height="23dp"
-                android:layout_marginStart="30dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="17dp"
+                android:layout_marginEnd="13dp"
                 android:foregroundGravity="center"
                 android:src="@drawable/trash_icon"
-                app:layout_constraintStart_toEndOf="@+id/tv_titleItemList"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <!--BAGIAN AKHIR BUTTON DELETE ITEMSHOP-->
