--- a/app/src/main/res/layout/fragment_add_item_shop.xml
+++ b/app/src/main/res/layout/fragment_add_item_shop.xml
@@ -305,7 +305,7 @@
             android:layout_marginEnd="16dp"
             android:fontFamily="@font/source_serif_4_bold"
             android:text="@string/amount_budget"
-            android:textColor="@color/black"
+            android:textColor="@color/hijau_gelap"
             android:textSize="17sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_date" />
